@@ -103,7 +103,7 @@ public class PortcullisOpener implements Opener
         @Nonnull Door door, double time, boolean instantOpen, boolean silent,
         @Nonnull ChunkLoadMode mode, boolean bypassProtectionHooks)
     {
-        if (!plugin.getCommander().canGo())
+        if (!plugin.getCommander().canGo() || !plugin.isSchedulerRunning())
         {
             plugin.getMyLogger()
                   .info("Failed to toggle: " + door.toSimpleString() + ", as door toggles are currently disabled!");
